Filename standardization. Default to report mode.

--- a/template/jscoverage.html
+++ b/template/jscoverage.html
@@ -28,7 +28,7 @@
 <link rel="stylesheet" type="text/css" href="jscoverage-ie.css">
 <![endif]-->
 <script type="text/javascript" src="jscoverage.js"></script>
-<script type="text/javascript" src="coverageData.js"></script>
+<script type="text/javascript" src="jscoverage-data.js"></script>
 </head>
 
 <body onload="jscoverage_body_load();" onresize="jscoverage_body_resize();">
